@@ -26,4 +26,4 @@ requires:
   perl: 5.006
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.251
+version: 0.26
